--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,14 +1,21 @@
 nav{
-    height: 60px;
+    /* height: 60px; */
     width: 100%;
+    margin-top: -1px;
+    padding: 0;
+    border: 0;
+    z-index: 1000; 
   }
+  
   .nav-button {
     height: 30px;
     width: 50px;
     margin: 0px 15px 0px 5px;
+    border: 0;
   }
 
   .button-img {
+  border: 0 solid white;
   height: 60px;
   width: 60px;
   position: absolute;
@@ -18,6 +25,7 @@ nav{
   transform: rotate(0deg); 
   opacity: 0; 
   transition: opacity 0.5s ease, transform 0.5s ease; 
+  
 }
 
 .nav-item {
@@ -27,4 +35,12 @@ nav{
 .nav-item:hover .button-img {
   opacity: 1; 
   transform: rotate(180deg); 
+}
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
+  background-color: #ffffff; 
 }
