--- a/styles/video.css
+++ b/styles/video.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 100vh;
     position: relative;
+    margin: 0;
+  padding: 0;
+  border: 0;
 }
 video {
     width: 100%;
