--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,10 +1,14 @@
 nav{
-    /* height: 60px; */
+    height: 60px;
     width: 100%;
     margin-top: -1px;
     padding: 0;
     border: 0;
-    z-index: 1000; 
+    z-index: 1000;
+    /* background-image:url('/path/nav.png') ;  */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
   }
   
   .nav-button {
