--- a/styles/video.css
+++ b/styles/video.css
@@ -2,9 +2,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    margin: 0;
-  padding: 0;
-  border: 0;
+    object-fit: cover;
 }
 video {
     width: 100%;
@@ -24,6 +22,7 @@ video {
     display: block;
     opacity: 1;
 }
+
 #content1 { top: 15%; left: 20%; }
 #content2 { top: 30%; left: 50%; }
 #content3 { top: 50%; left: 70%; }
