--- a/styles/video.css
+++ b/styles/video.css
@@ -3,11 +3,15 @@
     height: 100vh;
     position: relative;
     object-fit: cover;
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
 }
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 .content {
     opacity: 0;
