--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,14 +1,12 @@
 nav{
     height: 60px;
     width: 100%;
-    margin-top: -1px;
-    padding: 0;
-    border: 0;
-    border-top: 1px solid white;
-    /* background-image:url('/path/nav.png') ;  */
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
+    top: -1px;
+    padding: 0px;
+    border-top: 1px solid rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.5);
+    align-items: center;
+    box-shadow: 0 3px 10px rgba(41, 41, 41, 0.1);
   }
   
   .nav-button {
@@ -46,5 +44,6 @@ nav{
   left: 0;
   width: 100%;
   z-index: 1000; 
-  background-color: #ffffff; 
+  opacity: 1;
+  /* background-color: #ffffff;  */
 }
