--- a/styles/nav.css
+++ b/styles/nav.css
@@ -45,5 +45,6 @@ nav{
   width: 100%;
   z-index: 1000; 
   opacity: 1;
-  /* background-color: #ffffff;  */
+  transition: background-color 0.3s, box-shadow 0.3s;
+  background-color: rgba(245, 245, 245, 0.9);
 }
